Bug 555894 - Don't use static strings when setting environment variables [r=vladimir, sr=benjamin]